Titulo y primer parrafo en HTML

--- a/practica.html
+++ b/practica.html
@@ -1,8 +1,25 @@
 <html>
-<head> 
-	Titulo de cabecera
+
+<head>
+	<title> Principal </title>
+	<link rel="stylesheet" href="estilos.css" />
 </head>
+
 <body>
-<h1> Titulo2 </h1>
+	<div id="titulo">
+
+			<h1> Jiu Jistu</h1>
+			<h2>El arte del combate</h2>
+	</div>
+	<div id="container">
+		<div id="significado">
+			<h2>¿Qué es?</h2>
+		</div>
+		<p>El jiu-jitsu brasileño es un arte marcial, deporte de combate y sistema de defensa personal desarrollado en
+			Brasil. Se centra principalmente en la lucha cuerpo a cuerpo en el suelo, usando para ello luxaciones,
+			estrangulaciones, inmovilizaciones y derribos.
+		</p>
+	</div>
 </body>
+
 </html>
