Se agrega imagen en practica

--- a/practica.html
+++ b/practica.html
@@ -19,6 +19,10 @@
 			Brasil. Se centra principalmente en la lucha cuerpo a cuerpo en el suelo, usando para ello luxaciones,
 			estrangulaciones, inmovilizaciones y derribos.
 		</p>
+		<p>
+			<center><img src="/Users/rhernandezb/Khronos/Practica/jiujitsu.png" width="20%"/></center>
+		</p>
+	
 	</div>
 </body>
 
