Correccion de titulo

--- a/practica.html
+++ b/practica.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="titulo">
 
-			<h1> Jiu Jistu</h1>
+			<h1> Jiu Jitsu</h1>
 			<h2>El arte del combate</h2>
 	</div>
 	<div id="container">
