Agrego texto de utilidad e imagen png

--- a/practica.html
+++ b/practica.html
@@ -7,12 +7,11 @@
 
 <body>
 	<div id="titulo">
-
-			<h1> Jiu Jistu</h1>
-			<h2>El arte del combate</h2>
+		<h1> Jiu Jistu</h1>
+		<h2>El arte del combate</h2>
 	</div>
 	<div id="container">
-		<div id="significado">
+		<div id="titulos">
 			<h2>¿Qué es?</h2>
 		</div>
 		<p>El jiu-jitsu brasileño es un arte marcial, deporte de combate y sistema de defensa personal desarrollado en
@@ -20,9 +19,21 @@
 			estrangulaciones, inmovilizaciones y derribos.
 		</p>
 		<p>
-			<center><img src="/Users/rhernandezb/Khronos/Practica/jiujitsu.png" width="20%"/></center>
+			<center><img src="jiujitsu.png" width="20%" /></center>
 		</p>
-	
+
+
+		<div id="titulos">
+			<h2>Utilidad</h2>
+		</div>
+
+		<p>Perder peso: el jiu jitsu es una de las mejores prácticas para bajar de peso, quemando grasa porque durante
+			su práctica se combinan ejercicios aeróbicos y anaeróbicos y, esto, a su vez hace que se quemen grasas, pero
+			sin perder músculo. Notarás así que el cuerpo está más definido</p>
+		<p>
+			<center><img src="jiujitsu2.png" width="45%" /></center>
+		</p>
+
 	</div>
 </body>
 
