adicioné información al título
Solo adicioné información al titulo

--- a/practica.html
+++ b/practica.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<div id="titulo">
+	<div id="titulo del portal">
 
 			<h1> Jiu Jitsu Brasileño</h1>
 			<h2>El arte del combate</h2>
